good proportions for the md tailwind breakpoint but the contents still need to be correctly aligned

--- a/src/components/section/Section.css
+++ b/src/components/section/Section.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap');
 
 .section {
-  width: 100%;
-  height: 100vh;
   background-size:  cover;
   scroll-snap-align: start;
   font-family: "Tektur", sans-serif;
